--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,12 +2,22 @@
   "name": "frontend",
   "version": "1.0.0",
   "private": true,
+  "main": "dist/main/main.js",
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
+    "dev": "npm-run-all -p dev:main dev:electron",
+    "dev:main": "cross-env NODE_ENV=development tsc -p src/main/tsconfig.json",
+    "dev:electron": "cross-env NODE_ENV=development electron .",
+    "dev:renderer": "cross-env NODE_ENV=development nuxt src/renderer",
+    "build": "npm-run-all build:main build:renderer build:electron -- {@}",
+    "build:main": "cross-env NODE_ENV=production tsc -p src/main/tsconfig.json",
+    "build:renderer": "cross-env NODE_ENV=production nuxt generate src/renderer",
+    "build:electron": "cross-env NODE_ENV=production electron-builder",
+    "build:all": "npm-run-all build -- -mwl",
+    "build:win": "npm-run-all build -- --win",
+    "build:mac": "npm-run-all build -- --mac",
+    "build:linux": "npm-run-all build -- --linux",
+    "lint:js:fix": "eslint --ext \".js,.ts,.vue\" --fix --ignore-path .gitignore .",
+    "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint": "npm run lint:js && npm run lint:style"
   },
@@ -22,10 +32,16 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "cross-env": "^7.0.3",
+    "custom-electron-titlebar": "^3.2.6",
+    "electron": "^12.0.5",
+    "electron-builder": "^22.10.5",
+    "electron-devtools-installer": "^3.2.0",
+    "nuxt": "^2.15.3",
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.15.3",
+    "@nuxt/types": "^2.15.4",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
@@ -39,7 +55,9 @@
     "eslint-plugin-vue": "^7.7.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0"
