--- a/frontend/src/renderer/tsconfig.json
+++ b/frontend/src/renderer/tsconfig.json
@@ -14,7 +14,7 @@
     "strict": true,
     "noEmit": true,
     "experimentalDecorators": true,
-    "baseUrl": ".",
+    "baseUrl": "../..",
     "paths": {
       "~/*": [
         "./*"
@@ -29,7 +29,7 @@
     ]
   },
   "exclude": [
-    "node_modules",
+    "../../node_modules",
     ".nuxt",
     "dist"
   ]
